--- a/ticket.html
+++ b/ticket.html
@@ -107,6 +107,19 @@
           
       </div>
     </div>  
+
+    <footer class="p-0 sticky-xl-top">
+      <div class="container-fluid bg-dark p-1 text-center">
+          <button type="button" class="btn btn-outline-secondary border-0 text-white">Preguntas <br> frecuentes</button>
+          <button type="button" class="btn btn-outline-secondary border-0 text-white">Contáctanos</button>
+          <button type="button" class="btn btn-outline-secondary border-0 text-white">Prensa</button>
+          <button type="button" class="btn btn-outline-secondary border-0 text-white">Conferencias</button>
+          <button type="button" class="btn btn-outline-secondary border-0 text-white">Términos y<br> Condiciones</button>
+          <button type="button" class="btn btn-outline-secondary border-0 text-white">Privacidad</button>
+          <button type="button" class="btn btn-outline-secondary border-0 text-white">Estudiantes</button>
+      </div>
+    </footer>
+    
       <script src="js/js.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
